# pytmdb

./: .gitignore  README.md  pyproject.toml  requirement.txt  tox.ini
.github/workflows/: tests.yml
pytmdb/: models.py  search.py  tmdb.py
pytmdb/models/: __init_.py  search_models.py
src/pytmdb/: models.py  search.py  tmdb.py  utils.py
test/: search_data.py  search_test.py  tmdb_test.py
tests/: search_data.py  search_test.py  tmdb_test.py  util_test.py
