[project]
name = "pytmdb"
version = "0.0.1"
description = "Wrapper around the TMBD API"
dependencies = ['requests', 'types-requests', 'pydantic']

[project.optional-dependencies]
tests = ['coverage', 'pytest', 'pytest-stub']
dev = ['tox', 'flake8', 'black', 'isort', 'mypy']

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
